# monitoringnode

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  DigiCertGlobalRootG2.crt.pem  LED.c  LED.h  html.c  html.h  main.h  monitoringnode.c  monitoringnode.txt  pt928.c  pt928.h  sdcard.c  sdcard.h  sensors.c  sensors.h  time.c  timex.h  upload.c  upload.h  wifi.c  wifi.h  wifi.txt
